fixes to the file fonts

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -30,7 +30,7 @@
 
 @font-face {
   font-family: NoeTextbook;
-  src: url(../fonts/NoeTextbook.otf);
+  src: url(../fonts/NoeTextbook.woff);
 }
 
 /**
