adding clouds to the snacklist background

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -101,7 +101,6 @@
   background: #544a7d;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to top, #c42b28, #EE5B58, #fef492, #fddd30);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to top, #c42b28, #EE5B58, #fef492, #fddd30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -122,4 +121,5 @@ body {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
+  z-index: -2;
 }
